--- a/infra/templates/chezmoi.toml.j2
+++ b/infra/templates/chezmoi.toml.j2
@@ -15,9 +15,9 @@ encryption = "age"
 {% if ansible_facts.os_family == "Darwin" %}
 [data.darwin]
     brew_prefix = "{{ brew_prefix }}"
-    is_arm = {{ ansible_facts.machine in ["arm64", "aarch64"] }}
+    is_arm = {{ (ansible_facts.machine in ["arm64", "aarch64"]) | lower }}
 {% elif ansible_facts.os_family == "Debian" %}
 [data.debian]
     distribution = "{{ ansible_facts.distribution }}"
-    is_wsl = {{ ansible_kernel is search("microsoft|WSL") | default(false) }}
+    is_wsl = {{ (ansible_kernel is search("microsoft|WSL") | default(false)) | lower }}
 {% endif %}
