--- a/infra/templates/chezmoi.toml.j2
+++ b/infra/templates/chezmoi.toml.j2
@@ -10,7 +10,9 @@ hostname = "{{ ansible_hostname }}"
 os = "{{ ansible_facts.os_family | lower }}"
 arch = "{{ ansible_facts.machine }}"
 user = "{{ ansible_user_id }}"
+brew_bin = "{{ brew_bin }}"
 brew_prefix = "{{ brew_prefix }}"
+age_key_file = "{{ age_key_file }}"
 is_darwin = {{ (ansible_facts.os_family == "Darwin") | lower }}
 is_linux = {{ (ansible_facts.os_family != "Darwin") | lower }}
 {% if ansible_facts.os_family == "Darwin" %}
